# personal_timetabling

./: CMakeLists.txt  config.h  courses.csv  domain.csv  instance.cpp  instance.h  lop.cpp  lop.h  main.cpp  utils.h
